# academic

./: README.md
15619_CloudComputing/CCProj43/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
15619_CloudComputing/Individual/4_3/: bfs.cpp
15619_CloudComputing/Original Code/: README.md
15619_CloudComputing/Original Code/CCProj43/: bfs.cpp
15619_CloudComputing/cc/Proj15619/: HttpRequestSender.py  check_duplicated_q4.py
15619_CloudComputing/cc/Proj1_1/: Proj1_1.py
15619_CloudComputing/cc/Proj1_2/: __init__.py  runner_q2.py  runner_q6.py  runner_q7.py  test_full.sh  test_simple.sh
15619_CloudComputing/cc/Proj2_1/: Proj2_1.py  __init__.py  notes.md
15619_CloudComputing/cc/Proj2_2/: __init__.py  log_1424042680822.txt  log_1424048341347.txt
15619_CloudComputing/cc/Proj2_3/: DataAnalyzer.py  MSB_yw.py  reference
15619_CloudComputing/cc/Proj3_3/: step3_processer.py
15619_CloudComputing/cc/Test/: UnitTest.py
15619_CloudComputing/cc_java/src/: KeyValueLib.java
17655_Architecture/A1/: AltitudeConversion.java  FilterFramework.java  Filter_LessThan10KAltitude.java  MergeFrameFilter.java  MergeStreamFilter.java  Plumber.java  SinkFilter.java  SourceFilter.java  SplitFilter.java  SystemA.java  SystemB.java  SystemC.java  TempConversion.java  WildPointProblem.java
17655_Architecture/A2/A02/: User Table.sql
17655_Architecture/A3/src/: DoorBreakSensor.java  ECStart.bat  ECStart.sh  ECStart_SysB.bat  ECStart_SysB.sh  EquipmentInfo.java  FireAlarmController.java  FireSensor.java  HeartBeater.java  HumidityController.java  HumiditySensor.java  (+12 more)
(+5140 files in other folders)
